fixed footer overlapping

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -32,3 +32,6 @@ $background-color: #ffecdb;
 header {
   height: auto;
 }
+body {
+  padding-bottom: 200px;
+}
